# tanzim

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md
.github/workflows/: crates.io.yml  docker.yml  rust.yml
crates/: versioning.sh
crates/tanzim/: AGENTS.md  Cargo.toml  Makefile  README.md
crates/tanzim-load/: AGENTS.md  Cargo.toml  Makefile  README.md
crates/tanzim-load/examples/: AGENTS.md  custom_loader.rs  load_config.rs
crates/tanzim-load/src/: AGENTS.md  closure.rs  env.rs  file.rs  http.rs  lib.rs
crates/tanzim-load/tests/: closure.rs  env.rs  file.rs  http.rs
crates/tanzim-merge/: AGENTS.md  Cargo.toml  Makefile  README.md
crates/tanzim-merge/src/: AGENTS.md  lib.rs  plan.rs
crates/tanzim-merge/tests/: all.rs  plan.rs
crates/tanzim-parse/: AGENTS.md  Cargo.toml  Makefile  README.md
crates/tanzim-parse/examples/: AGENTS.md  custom_parser.rs  parse_config.rs  parse_config_file.rs
crates/tanzim-parse/examples/etc/: bad.yaml  demo.json  demo.yaml
crates/tanzim-parse/src/: AGENTS.md  closure.rs  env.rs  json.rs  lib.rs  span.rs  toml.rs  yaml.rs
crates/tanzim-parse/tests/: closure.rs  env.rs  json.rs  span.rs  toml.rs  yaml.rs
crates/tanzim-parse/tests/etc/: baz.toml  foo.env
crates/tanzim-source/: AGENTS.md  Cargo.toml  Makefile  README.md
crates/tanzim-source/examples/: AGENTS.md  parse_sources.rs
crates/tanzim-source/src/: AGENTS.md  impls.rs  lib.rs  parse.rs  serde.rs
crates/tanzim-source/tests/: all.rs  impls.rs  parse.rs  serde.rs
crates/tanzim-testing/: Cargo.toml  Makefile  README.md
crates/tanzim-testing/src/: environment.rs  lib.rs
crates/tanzim-testing/tests/: environment.rs
crates/tanzim-validate/: AGENTS.md  Cargo.toml  Makefile  README.md
crates/tanzim-validate/examples/: builder.rs  schema.rs
crates/tanzim-validate/src/: boolean.rs  bytesize.rs  cidr.rs  datetime.rs  duration.rs  dynamic_map.rs  either.rs  encoding.rs  enumeration.rs  error.rs  float.rs  integer.rs  lib.rs  list.rs  net.rs  non_empty.rs  number.rs  path.rs  percentage.rs  regex.rs  schema.rs  semver.rs  static_map.rs  string.rs  url.rs  uuid.rs
crates/tanzim-validate/tests/: boolean.rs  bytesize.rs  cidr.rs  datetime.rs  duration.rs  dynamic_map.rs  either.rs  encoding.rs  enumeration.rs  error.rs  float.rs  integer.rs  list.rs  net.rs  non_empty.rs  number.rs  path.rs  percentage.rs  regex.rs  schema.rs  semver.rs  static_map.rs  string.rs  url.rs  uuid.rs
crates/tanzim-value/: AGENTS.md  Cargo.toml  Makefile  README.md
crates/tanzim-value/src/: AGENTS.md  error.rs  lib.rs  serde.rs  value.rs
crates/tanzim-value/tests/: error.rs  serde.rs  value.rs
crates/tanzim/src/: AGENTS.md  config.rs  entry.rs  lib.rs  loader.rs  logging.rs  merger.rs  parser.rs  pipeline.rs  source.rs  validator.rs  value.rs
crates/tanzim/src/opt_in/: mod.rs
crates/tanzim/src/opt_in/config/: env.rs  file.rs  mod.rs
crates/tanzim/src/pipeline/: mod.rs  multi.rs  single.rs
crates/tanzim/tests/: doc.rs  merger.rs  pipeline.rs  smoke.rs  source_builders.rs
crates/tanzim/tests/etc/: bar.json  baz.toml  foo.env  qux.yml
examples/: AGENTS.md
examples/basic/: AGENTS.md  main.rs  schema.yml
examples/basic/etc/: qux.yml
examples/full/: AGENTS.md  main.rs  schema.yml
examples/full/etc/: bar.json  baz.toml  foo.env  qux.toml
tanzim/: Cargo.toml
tanzim/src/: load.rs  main.rs  source.rs
