[package]
name = "tanzim-cli"
version = "0.1.0"
edition = "2024"
license = "BSD-3-Clause"
repository = "https://github.com/pouriya/tanzim"
description = "Command-line interface for the tanzim configuration pipeline"

[[bin]]
name = "tanzim"
path = "src/main.rs"

[dependencies]
tanzim = { path = "../crates/tanzim", default-features = false, features = ["full", "tracing"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

[profile.release]
opt-level = 'z'     # Optimize for size.
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations.
panic = 'abort'     # Abort on panic
strip = true