[package]
name = "tanzim-load"
version = "0.13.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Load configuration bytes from declarative configuration sources"
readme = "README.md"
homepage = "https://crates.io/crates/tanzim-load"
documentation = "https://docs.rs/tanzim-load"
categories = ["config", "filesystem"]
keywords = ["config", "configuration", "loader", "env", "file"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "../../LICENSE"]

[dependencies]
tanzim-source = { path = "../tanzim-source", version = "0.8.0" }
cfg-if = "1.0.0"
log = { version = "0.4.20", optional = true }
tracing = { version = "0.1.40", optional = true }
url = { version = "2.5.8", optional = true, default-features = false }

[features]
default = ["env", "file", "http"]
env = []
file = []
http = ["dep:url"]
logging = ["dep:log"]
tracing = ["dep:tracing"]
full = ["env", "file", "http"]

[dev-dependencies]
tanzim-testing = { path = "../tanzim-testing", version = "0.2.0" }
attohttpc = {version = "0.31.0", default-features = false, features = ["tls-native"]}

[[example]]
name = "load_config"
path = "examples/load_config.rs"
required-features = ["full"]

[[test]]
name = "env"
path = "tests/env.rs"
required-features = ["env"]

[[test]]
name = "file"
path = "tests/file.rs"
required-features = ["file"]

[[test]]
name = "http"
path = "tests/http.rs"
required-features = ["http"]

[package.metadata.docs.rs]
all-features = true
