[package]
name = "tanzim-merge"
version = "0.13.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Merge parsed configuration values by entry name"
readme = "README.md"
homepage = "https://crates.io/crates/tanzim-merge"
documentation = "https://docs.rs/tanzim-merge"
categories = ["config"]
keywords = ["config", "configuration", "merge", "settings", "override"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "../../LICENSE"]

[dependencies]
tanzim-load = { path = "../tanzim-load", version = "0.10.0", default-features = false }
tanzim-source = { path = "../tanzim-source", version = "0.6.0" }
tanzim-value = { path = "../tanzim-value", version = "0.8.0" }
thiserror = "1.0.56"
cfg-if = "1.0.0"
log = { version = "0.4.20", optional = true }
tracing = { version = "0.1.40", optional = true }

[features]
default = []
logging = ["dep:log"]
tracing = ["dep:tracing"]

[package.metadata.docs.rs]
all-features = true
