[package]
name = "tanzim-validate"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Validate and coerce tanzim-value configuration trees"
readme = "README.md"
homepage = "https://crates.io/crates/tanzim-validate"
documentation = "https://docs.rs/tanzim-validate"
categories = ["config"]
keywords = ["config", "validation", "schema", "validate"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "../../LICENSE"]

[dependencies]
tanzim-value = { path = "../tanzim-value", version = "0.2.0" }
cfg-if = "1.0.0"
log = { version = "0.4.20", optional = true }
tracing = { version = "0.1.40", optional = true }
regex = { version = "1", optional = true }
url = { version = "2", optional = true }
ipnet = { version = "2", optional = true }
uuid = { version = "1", optional = true }
semver = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
humantime = { version = "2", optional = true }
bytesize = { version = "1", optional = true }
jiff = { version = "0.1", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"

[features]
default = ["logging"]
logging = ["dep:log"]
tracing = ["dep:tracing"]
regex = ["dep:regex"]
url = ["dep:url"]
cidr = ["dep:ipnet"]
uuid = ["dep:uuid"]
semver = ["dep:semver"]
encoding = ["dep:base64"]
duration = ["dep:humantime"]
bytesize = ["dep:bytesize"]
datetime = ["dep:jiff"]
schema = ["dep:serde"]
full = [
    "regex",
    "url",
    "cidr",
    "uuid",
    "semver",
    "encoding",
    "duration",
    "bytesize",
    "datetime",
    "schema",
]

[[example]]
name = "builder"
path = "examples/builder.rs"

[[example]]
name = "schema"
path = "examples/schema.rs"
required-features = ["schema"]

[package.metadata.docs.rs]
all-features = true
