[package]
name = "tanzim-validate"
version = "0.12.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Validate and coerce tanzim-value configuration trees"
readme = "README.md"
homepage = "https://crates.io/crates/tanzim-validate"
documentation = "https://docs.rs/tanzim-validate"
categories = ["config"]
keywords = ["config", "validation", "schema", "validate"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "../../LICENSE"]

[dependencies]
tanzim-value = { path = "../tanzim-value", version = "0.11.0" }
cfg-if = "1.0.0"
log = { version = "0.4.20", optional = true }
tracing = { version = "0.1.40", optional = true }
regex = { version = "1", optional = true }
url = { version = "2", optional = true }
ipnet = { version = "2", optional = true }
uuid = { version = "1", optional = true }
semver = { version = "1", optional = true }
base64 = { version = "0.22", optional = true }
humantime = { version = "2", optional = true }
bytesize = { version = "1", optional = true }
jiff = { version = "0.1", optional = true }
serde = { version = "1", optional = true }

[dev-dependencies]
serde_json = "1"
tanzim-source = { path = "../tanzim-source", version = "0.9.0" }

[features]
default = [
    "boolean",
    "either",
    "enumeration",
    "float",
    "integer",
    "list",
    "net",
    "non_empty",
    "number",
    "path",
    "percentage",
    "static_map",
    "string",
    "dynamic_map",
]

# std-only validators (one per module)
boolean = []
either = []
enumeration = []
float = ["number"]
integer = ["number"]
list = []
net = ["integer"]
non_empty = []
number = []
path = []
percentage = []
static_map = []
string = []
dynamic_map = []

# dep-backed validators
regex = ["dep:regex"]
url = ["dep:url"]
cidr = ["dep:ipnet"]
uuid = ["dep:uuid"]
semver = ["dep:semver"]
encoding = ["dep:base64"]
duration = ["dep:humantime"]
bytesize = ["dep:bytesize"]
datetime = ["dep:jiff"]
schema = ["dep:serde"]

logging = ["dep:log"]
tracing = ["dep:tracing"]

# defaults + dep-backed validators + schema, without logging/tracing
full = [
    "boolean",
    "either",
    "enumeration",
    "float",
    "integer",
    "list",
    "net",
    "non_empty",
    "number",
    "path",
    "percentage",
    "static_map",
    "string",
    "dynamic_map",
    "regex",
    "url",
    "cidr",
    "uuid",
    "semver",
    "encoding",
    "duration",
    "bytesize",
    "datetime",
    "schema",
]

[[example]]
name = "builder"
path = "examples/builder.rs"

[[example]]
name = "schema"
path = "examples/schema.rs"
required-features = ["schema"]

[[test]]
name = "bytesize"
path = "tests/bytesize.rs"
required-features = ["bytesize"]

[[test]]
name = "cidr"
path = "tests/cidr.rs"
required-features = ["cidr"]

[[test]]
name = "datetime"
path = "tests/datetime.rs"
required-features = ["datetime"]

[[test]]
name = "duration"
path = "tests/duration.rs"
required-features = ["duration"]

[[test]]
name = "encoding"
path = "tests/encoding.rs"
required-features = ["encoding"]

[[test]]
name = "regex"
path = "tests/regex.rs"
required-features = ["regex"]

[[test]]
name = "semver"
path = "tests/semver.rs"
required-features = ["semver"]

[[test]]
name = "url"
path = "tests/url.rs"
required-features = ["url"]

[[test]]
name = "uuid"
path = "tests/uuid.rs"
required-features = ["uuid"]

[[test]]
name = "schema"
path = "tests/schema.rs"
required-features = ["full"]

[package.metadata.docs.rs]
all-features = true
