[package]
name = "tanzim-value"
version = "0.10.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Located configuration values"
readme = "README.md"
homepage = "https://crates.io/crates/tanzim-value"
documentation = "https://docs.rs/tanzim-value"
categories = ["config", "data-structures"]
keywords = ["config", "configuration", "value", "settings", "tree"]
include = ["src/**/*.rs", "Cargo.toml", "README.md", "../../LICENSE"]

[dependencies]
tanzim-source = { path = "../tanzim-source", version = "0.8.0" }
serde = { version = "1.0.195", optional = true, features = ["derive"] }

[dev-dependencies]
serde_json = "1"

[features]
serde = ["dep:serde"]

[package.metadata.docs.rs]
all-features = true

[[test]]
name = "serde"
path = "tests/serde.rs"
required-features = ["serde"]
